	* [Bug] Component getRequires needed to return all components in lowercase.
	* [Bug] Component isLoadable needed to check if the files are loaded instead of just loaded.
	* [Bug] Component added library checks the the isLoadable check.  This was needed for components that
	  provide functionality from another component.
	* [Feature] Some new developer utilities, "export_dev_bundle.sh" for one.  This is a script that will
	  export the CWD as an installable bundle with all the developer utilities and un-minified components.
	* [Feature] Updated the system updater to better display components that have errors with them.
	* [Feature] Removed the execMode check on components.

Core Plus 2.5.6

	* [Feature] Retooled the filestore system.  It is now more self contained and has actual tests behind
	  it
	* [Feature] Added a new method for templates, hasWidgetAreas.
	* [Feature] Insertables now will parse for resized images and return the server-resized version.
	-- Charlie Powell <charlie@eval.bz>  Wed, 05 Jun 2013 17:59:50 -0400

Core Plus 2.5.5

	* [Bug] Fixed a minor glitch when /file/preview is recording its entry in the page navigation.  This
	  caused some weird redirect issues.
	* [Bug] Set /file/preview to allow reading of "asset/" files.  This is the discouraged method of
	  loading assets, but allowed.
	* [Bug] Minor bug in the HookHandler.  Did not account for type="string" returns that didn't have a
	  return value.
	* [Bug] Set the file local getFilenameHash to return a more agnostic asset path.  Now the theme name
	  is dropped as it's unnecessary.
	* [Bug] Fix in the packager to ignore filenames that end with "~".  These are backup files that are
	  not necessary.
	* [Feature] Added support for page groups under the admin menu.
	* [Feature] Set hard-mapped pages to overwrite their access strings from the component metafile upon
	  reinstallation.  This is because those pages are generally managed by the developer and not the end
	  user.