@@ -36,36 +36,38 @@ class AdminMenuWidget extends Widget_2_1 {
 		$pages = PageModel::Find(array('admin' => '1'));
 		$groups = array();
 		$flatlist = array();
-		foreach($pages as $p){
-			if(!\Core\user()->checkAccess($p->get('access'))) continue;
-			if($p->get('title') == "Administration") {
-				$p->set('title', trim(str_replace("Administration", "Admin", $p->get('title'))) );
-			} else {
-				$p->set('title', trim(str_replace("Admin","", str_replace("Administration", "", $p->get('title'))) ) );
-			}
-			if($p->get('title') == "System Configuration") {
-				$p->set('title', "System Config");
-			}
-			if($p->get('title') == "Navigation Listings") {
-				$p->set('title', "Navigation");
-			}
-			if($p->get('title') == "Content Page Listings") {
-				$p->set('title', "Content Pages");
-			}
+		if(\Core\user()){
+			foreach($pages as $p){
+				if(!\Core\user()->checkAccess($p->get('access'))) continue;
+				if($p->get('title') == "Administration") {
+					$p->set('title', trim(str_replace("Administration", "Admin", $p->get('title'))) );
+				} else {
+					$p->set('title', trim(str_replace("Admin","", str_replace("Administration", "", $p->get('title'))) ) );
+				}
+				if($p->get('title') == "System Configuration") {
+					$p->set('title', "System Config");
+				}
+				if($p->get('title') == "Navigation Listings") {
+					$p->set('title', "Navigation");
+				}
+				if($p->get('title') == "Content Page Listings") {
+					$p->set('title', "Content Pages");
+				}
 
-			$group = $p->get('admin_group') ? $p->get('admin_group') : 'Admin';
+				$group = $p->get('admin_group') ? $p->get('admin_group') : 'Admin';
 
-			// Some group tweaks ;)
-			$group = str_replace('and', '&', $group);
+				// Some group tweaks ;)
+				$group = str_replace('and', '&', $group);
 
-			if(!isset($groups[$group])){
-				$groups[$group] = array();
+				if(!isset($groups[$group])){
+					$groups[$group] = array();
+				}
+
+				// The new grouped pages
+				$groups[$group][ $p->get('title') ] = $p;
+				// And the flattened list to support legacy templates.
+				$flatlist[ $p->get('title') ] = $p;
 			}
-
-			// The new grouped pages
-			$groups[$group][ $p->get('title') ] = $p;
-			// And the flattened list to support legacy templates.
-			$flatlist[ $p->get('title') ] = $p;
 		}
 
 		ksort($flatlist);
